translation-tool/inputs/source_meta/objects/YAHS_PP_SearchConfig__mdt.object
<CustomObject>
    <description>This object store the list of fields on which the user would be able to search for the cases . 

Field Descriptions :
	Label - API name of the field

       Query Field - API name of the field which is to be queried. For example for &quot;LastModifiedDate&quot; , internally   we use &quot;SystemModStamp&quot; in the query since its indexed, for other fields Label and Query Field can be the same

      Field Type - Type of the field. text , picklist or date. Based on this appropriate HTML fields would be displayed on the UI

     Search Options - Will have list of comparison operator&apos;s for the particular field

     Display Sequence - Sequence in which the fields has to be displayed on the UI

     isIndexed -  Set to true if the field is indexed

     hasLabel - If set to true , the custom label will be used to display field label else standard field label would be used.</description>
    <fields>
        <fullName>Applicable_In__c</fullName>
        <label>Applicable In?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Portal</fullName>
                    <default>true</default>
                    <label>Partner Portal</label>
                </value>
                <value>
                    <fullName>Enterprise Portal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_On_UI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark this true when you want the column to be visible on the search page results</description>
        <inlineHelpText>Mark this true when you want the column to be visible on the search page results</inlineHelpText>
        <label>Display On UI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Sequence__c</fullName>
        <label>Display Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Date</fullName>
                    <default>true</default>
                    <label>Date</label>
                </value>
                <value>
                    <fullName>Lookup</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LookupPage__c</fullName>
        <description>When the Field Type is Lookup, choose the name of the page to redirect to when the lookup icon is clicked on the search page</description>
        <inlineHelpText>When the Field Type is Lookup, choose the name of the page to redirect to when the lookup icon is clicked on the search page</inlineHelpText>
        <label>LookupPage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_Field__c</fullName>
        <label>Query Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Options__c</fullName>
        <label>Search Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasLabel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasLabel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isIndexed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isIndexed</label>
        <type>Checkbox</type>
    </fields>
    <label>YAHS_PP_SearchConfig</label>
    <pluralLabel>YAHS_PP_SearchConfigs</pluralLabel>
</CustomObject>